photo and fixed align central div

--- a/styles.css
+++ b/styles.css
@@ -5,6 +5,7 @@
 	.intro {
 		width: 100%;
 		height: 100vh;
+		position: relative;
 	}
 		
 	.title__easy1 h1{
@@ -50,7 +51,7 @@
 	.container {
 		position: absolute;
 		top: 360px;
-		left: 260px;
+		left: center;
 		width: 1400px;
 		height: 100%;
 
@@ -95,15 +96,30 @@
 		font-size: 30px;
 	}
 	
-		.container__inside {
+	.container__p {
+		font-family: 'Kanit', sans-serif;
+		color: #000000;
+		text-align: right;
+		margin: 87px 40px 0 20px;
+		font-size: 30px;
+	}
+	
+	.container__inside {
 		display: flex;
 		align-items: up;
 		justify-content: center;
 		height: 100%;
 		box-shadow: -0.5px -0.5px 25px #000000;
 		border-radius: 40px 40px 0 0;
-		}
+	}
 		
+	.image__nft {
+		display: flex;
+		margin: 5% 0 0 3%;
+		border-radius: 70px;
+		transform:skew(-10deg,0);
+		opacity: .6;
+	}
 		/*Navigation*/
 	
 	.nav__text {
